trunk/Archive2/86/eb3109832a333f/output
main.cpp:4:29: error: 'HiThere' was not declared in this scope
 const char* s = TOKENPASTE3(Hi, There);
                             ^
main.cpp:1:26: note: in definition of macro 'TOKENPASTE'
 #define TOKENPASTE(x, y) x ## y
                          ^
main.cpp:4:17: note: in expansion of macro 'TOKENPASTE3'
 const char* s = TOKENPASTE3(Hi, There);
                 ^
